# docgen-rs

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
nix/: README.md  default.nix  lib.nix  mkDocgen.nix  schema.nix
nix/flakeModules/: docs.nix
nix/tests/: default.nix  lib.nix  schema.nix
src/: comment.rs  commonmark.rs  main.rs  test.rs
src/snapshots/: docgen__test__arg_formatting.snap  docgen__test__commonmark.snap  docgen__test__doc_comment_no_duplicate_arguments.snap  docgen__test__doc_comment_section_description.snap  docgen__test__export_flag.snap  docgen__test__headings.snap  docgen__test__inherited_exports.snap  docgen__test__main_minimal.snap  docgen__test__options_rendering.snap  nixdoc__test__doc_comment.snap  nixdoc__test__file_doc_extraction.snap  nixdoc__test__json_output.snap  nixdoc__test__main.snap
test/: arg-formatting.nix  commonmark.md  doc-comment-arguments.nix  doc-comment-sec-heading.nix  doc-comment.nix  headings.md  inherited-exports.nix  let-ident-chained.nix  let-ident.nix  patterns.nix  strings.nix
