[package]
name = "nixdoc"
version = "3.0.4"
authors = ["Vincent Ambo <mail@tazj.in>", "asymmetric"]
edition = "2021"
description = "Generate CommonMark from Nix library functions"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
rnix = "0.12"
rowan = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"

[dev-dependencies]
insta = "1.43.2"
