[package]
name = "docgen"
version = "1.0.0"
authors = ["Albert O'Shea"]
edition = "2024"
description = "Documentation generator CLI for Nix projects"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
rnix = "0.12"
rowan = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"

[dev-dependencies]
insta = "1.43.2"
